# Rux

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  Build.ps1  Build.sh  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Format.ps1  Format.sh  LICENSE  PR_BODY.md  PUSH_AND_PR.md  README.md  Rux.sln  Rux.slnx  Rux.toml  Test.ps1  Test.sh  build.ps1  compile_commands.json  flake.nix  make_pr.bat  rux.spec
.github/: CODE_OF_CONDUCT.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/scripts/: Enter-VsDevEnv.ps1
.github/workflows/: CodeQuality.yml  FreeBSD.yml  Linux.yml  PullRequestPolicy.yml  Release.yml  Windows.yml  (+17 more)
Compiler/: CMakeLists.txt  Main.cpp
Compiler/Backend/: Layout.cpp  Layout.h
Compiler/Backend/Link/: ElfWriter.cpp  Linker.cpp  Linker.h  LinkerInternal.h  MachOWriter.cpp  PeWriter.cpp
Compiler/Backend/Rcu/: Rcu.cpp  Rcu.h  RcuCodeGen.cpp  RcuDump.cpp  RcuInternal.h  RcuWriter.cpp
Compiler/Backend/X64/: Asm.cpp  Asm.h  X64Encoder.h
Compiler/Cli/: Cli.cpp  Cli.h  CliHelp.cpp  CmdBuild.cpp  CmdCheck.cpp  CmdLint.cpp  CmdMisc.cpp  CmdNew.cpp  CmdPackage.cpp  CmdRun.cpp  CmdTest.cpp  DefineOption.h  TerminalStyle.cpp  TerminalStyle.h
Compiler/CodeGen/: FloatLiteral.h  Layout.cpp  Layout.h  PhiMoveResolver.h
Compiler/CodeGen/AArch64/: NativeEmitter.cpp  NativeEmitter.h
Compiler/CodeGen/X86_64/: Assembler.cpp  Assembler.h  AssemblyPrinter.cpp  AssemblyPrinter.h  Encoder.h  RcuEmitter.cpp  RcuEmitter.h
Compiler/Diagnostics/: Diagnostics.cpp  Diagnostics.h
Compiler/Driver/: BuildReport.cpp  BuildReport.h  BuildTarget.cpp  BuildTarget.h  CompilerDriver.cpp  CompilerDriver.h  Driver.cpp  Driver.h
Compiler/Formatter/: Formatter.cpp  Formatter.h
Compiler/Frontend/: Lexer.cpp  Lexer.h  SourceLoader.cpp  Token.cpp  Token.h
Compiler/Frontend/Ast/: Ast.h
Compiler/Frontend/Parser/: Parser.cpp  Parser.h  ParserDecl.cpp  ParserDump.cpp  ParserExpr.cpp  ParserStmt.cpp  ParserType.cpp
Compiler/Frontend/Sema/: Sema.cpp  Sema.h  SemaDump.cpp  Type.cpp
Compiler/Include/Rux/: Ast.h  BuildTarget.h  Cli.h  Hir.h  Lexer.h  Linker.h  Lir.h  Optimizer.h  Parser.h  Process.h  Rcu.h  Target.h  Terminal.h  Version.h.in  WinApi.h
Compiler/Ir/: Optimizer.cpp  Optimizer.h
Compiler/Ir/Hir/: Hir.cpp  Hir.h  HirDump.cpp  HirInternal.h  HirPrinter.h
Compiler/Ir/Hir/Passes/: PassManager.cpp  PassManager.h
Compiler/Ir/Lir/: Lir.cpp  Lir.h  LirDump.cpp  LirPrinter.h
Compiler/Lexer/: Lexer.cpp  Lexer.h  Token.cpp  Token.h
Compiler/Linker/: Linker.cpp  Linker.h  LinkerInternal.h
Compiler/Linker/Elf/: ElfWriter.cpp
Compiler/Linker/MachO/: MachOWriter.cpp
Compiler/Linker/Pe/: PeWriter.cpp
Compiler/Linter/: Linter.cpp  Linter.h
Compiler/Lowering/AstToHir/: AstToHir.cpp  AstToHir.h
Compiler/Lowering/HirToLir/: HirToLir.cpp  HirToLir.h
Compiler/Object/Rcu/: Rcu.h  RcuDump.cpp  RcuDumper.h  RcuSerialization.h  RcuStringTable.h  RcuWriter.cpp  RcuWriter.h
Compiler/Package/: Manifest.cpp  Manifest.h  Package.cpp
Compiler/Platform/: Host.cpp  Host.h  Os.cpp  Os.h  Platform.h  Process.cpp  Process.h  Target.h  Terminal.cpp  Terminal.h  WinApi.h
Compiler/Semantic/: CompileTimeContext.h  ConditionalCompilation.cpp  ConditionalCompilation.h  PrimitiveConstants.cpp  PrimitiveConstants.h  SemanticAnalyzer.cpp  SemanticAnalyzer.h  SemanticModel.h  SemanticPrinter.cpp  SemanticPrinter.h  SemanticVersion.h  Type.cpp  Type.h
Compiler/Source/: Asm.cpp  BuildCmd.cpp  BuildReport.cpp  BuildTarget.cpp  CheckCmd.cpp  Cli.cpp  HelpCmd.cpp  Hir.cpp  Host.cpp  InstallCmd.cpp  Lexer.cpp  Linker.cpp  Lir.cpp  Manifest.cpp  Optimizer.cpp  Package.cpp  PackageCmd.cpp  Process.cpp  Rcu.cpp  Sema.cpp  SourceLoader.cpp  SourceLocation.h  Terminal.cpp  UtilityCmd.cpp
Compiler/Support/: Diagnostics.cpp  Diagnostics.h  Layout.h
Compiler/Syntax/Ast/: Ast.h
Compiler/Syntax/Parser/: Parser.cpp  Parser.h  ParserDecl.cpp  ParserDump.cpp  ParserExpr.cpp  ParserStmt.cpp  ParserType.cpp
Compiler/System/: Host.cpp  Host.h  Os.cpp  Os.h  Process.cpp  Process.h  WinApi.h
Docs/: Architecture.md  Branches.md  CI-CD.md  Packages.md  PullRequest.md  README.md  Release.md  Workflow.md
Draft/: Syntax.rx
Rux/: Diagnostic.cpp  Diagnostic.h  Rux.cpp  Rux.h  Rux.vcxproj  Rux.vcxproj.filters  Source.h  pch.h
Source/: Asm.cpp  BuildCmd.cpp  BuildTarget.cpp  CheckCmd.cpp  Cli.cpp  ConstFold.cpp  CopyProp.cpp  Hir.cpp  InstallCmd.cpp  Lexer.cpp  Linker.cpp  Lir.cpp  Main.cpp  Manifest.cpp  Optimizer.cpp  Package.cpp  Parser.cpp  Platform.cpp  Rcu.cpp  Sema.cpp  SourceLoader.cpp  SsaConstruct.cpp  Token.cpp  UtilityCmd.cpp
Tests/: CMakeLists.txt  README.md  RuxTestingFramework.cmake  run_bool_bitwise_test.sh  run_cast_precedence_test.sh  run_const_expr_test.sh  run_dll_test.sh  run_io_test.sh  run_numeric_suffix_test.sh  run_pow_test.sh  run_regalloc_tests.sh  run_smoke_tests.cmake  run_ssa_tests.sh  run_target_import_test.sh  run_tuple_test.sh  run_unicode_test.sh
Tests/Unit/: BuildReportTests.cpp  BuiltinAssertTests.cpp  BuiltinPanicTests.cpp  CMakeLists.txt  CodegenTests.cpp  CompilerDriverTests.cpp  ConditionalCompilationTests.cpp  FormatterTests.cpp  GoldenDiagnosticsTests.cpp  LexerTests.cpp  LinkerTests.cpp  LinterTests.cpp  Main.cpp  ManifestTests.cpp  OptimizerTests.cpp  OsTests.cpp  PrimitiveConstantsTests.cpp  ProcessTests.cpp  SemanticTests.cpp
Tests/Unit/Golden/: ImmutablePointerWrite.expected  ImmutablePointerWrite.rux  MatchElse.expected  MatchElse.rux  MissingSemicolon.expected  RemovedConditionalSyntax.rux  RemovedDollarSigil.expected  RemovedDollarSigil.rux  RemovedIntrinsicSyntax.expected  RemovedIntrinsicSyntax.rux  TargetMetadataKeyRemoved.expected  TypeMismatch.expected  UndefinedVariable.expected  UndefinedVariable.rux  UnimplementedPrimitiveType.expected  UnimplementedPrimitiveType.rux  UnknownEscape.rux  When.expected  When.rux  WhenElseIfMix.expected  WhenInExtend.rux
Tools/: CheckPlatformIsolation.sh
docs/: README.md  rux_code_examples.md  rux_gap_analysis.md
(+433 files in other folders)
